Feat: Add success bid

--- a/socket-server/views/chat.html
+++ b/socket-server/views/chat.html
@@ -44,6 +44,13 @@
       messageList.appendChild(messageTag);
     });
 
+    socket.on('successBid', bidInfo => {
+      var messageList = document.getElementById('messages');
+      var messageTag = document.createElement('li');
+      messageTag.innerText = `${bidInfo.user.nickname}님이 ${bidInfo.item.itemName}에 ${bidInfo.price}원을 입찰함`;
+      messageList.appendChild(messageTag);
+    });
+
     function enterRoom() {
       nickname = document.getElementById('nickname').value;
       roomId = document.getElementById('roomId').value;
