--- a/socket-server/views/chat.html
+++ b/socket-server/views/chat.html
@@ -18,6 +18,7 @@
       <button onclick="sendMsg()">채팅</button><br />
       <input type="text" name="notice" id="notice" />
       <button onclick="sendNotice()">공지</button><br />
+      <button onclick="startAuction()">시작</button>
     </div>
     <div>
       <h3 id="timer"></h3>
@@ -81,10 +82,10 @@
       messageList.appendChild(messageTag);
     });
 
-    socket.on('start', item => {
+    socket.on('start', data => {
       var messageList = document.getElementById('messages');
       var messageTag = document.createElement('li');
-      messageTag.innerText = ` ${item.itemName} 경매 시작!`;
+      messageTag.innerText = ` ${data.itemId} 경매 시작! : ${data.price}원`;
       messageList.appendChild(messageTag);
     });
 
@@ -125,6 +126,12 @@
         msg: msg.value,
       });
       msg.value = '';
+    }
+
+    function startAuction() {
+      socket.emit('start', {
+        roomId,
+      });
     }
   </script>
 </html>
