--- a/socket-server/views/chat.html
+++ b/socket-server/views/chat.html
@@ -90,6 +90,14 @@
       messageList.appendChild(messageTag);
     });
 
+    socket.on('init', data => {
+      console.log(data);
+      var messageList = document.getElementById('messages');
+      var messageTag = document.createElement('li');
+      messageTag.innerText = ` ${data}`;
+      messageList.appendChild(messageTag);
+    });
+
     function enterRoom() {
       nickname = document.getElementById('nickname').value;
       roomId = document.getElementById('roomId').value;
