--- a/socket-server/views/chat.html
+++ b/socket-server/views/chat.html
@@ -98,6 +98,13 @@
       messageList.appendChild(messageTag);
     });
 
+    socket.on('redis-update', msg => {
+      var messageList = document.getElementById('messages');
+      var messageTag = document.createElement('li');
+      messageTag.innerText = msg;
+      messageList.appendChild(messageTag);
+    });
+
     function enterRoom() {
       nickname = document.getElementById('nickname').value;
       roomId = document.getElementById('roomId').value;
